# VoiceRecognitionAI

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
ext/AudioFile/: AudioFile.h  CMakeLists.txt
src/: main.cpp
src/Core/: AutocorrellatedVoiceActivityDetector.cpp  AutocorrellatedVoiceActivityDetector.h  CMakeLists.txt  LinearPredictiveCoding.cpp  LinearPredictiveCoding.h  LpcExtractor.cpp  LpcExtractor.h  Normalizer.cpp  Normalizer.h  RecognitionResult.h  RecognitionStarter.cpp  RecognitionStarter.h  VoiceSample.cpp  VoiceSample.h
src/Rest/: CMakeLists.txt  ResourceCheckVoice.cpp  ResourceCheckVoice.h  ResourceFactory.cpp  ResourceFactory.h  ResourceNotFound.cpp  ResourceNotFound.h  ResourceTemplate.cpp  ResourceTemplate.h  ResponseMessage.cpp  ResponseMessage.h  RestUtils.cpp  RestUtils.h  RouteManager.cpp  RouteManager.h  Server.cpp  Server.h
src/Utils/: CMakeLists.txt  FileManager.cpp  FileManager.h  Logger.cpp  Logger.h
